docs/v2.0.4/_sources/gallery/basic/plot_propagation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/basic/plot_propagation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_basic_plot_propagation.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_basic_plot_propagation.py:


4x4 Coupler [linear]
====================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

Importing the script dependencies

.. GENERATED FROM PYTHON SOURCE LINES 8-16

.. code-block:: Python

    from SuPyMode.workflow import Workflow, fiber_loader, Boundaries, DomainAlignment, Profile, StructureType
    from SuPyMode.workflow import AlphaProfile

    wavelength = 1550e-9

    clad_refractive_index = 1.4444









.. GENERATED FROM PYTHON SOURCE LINES 17-20

Generating the fiber structure
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Here we define the cladding and fiber structure to model the problem

.. GENERATED FROM PYTHON SOURCE LINES 20-47

.. code-block:: Python

    clad_structure = Profile()

    clad_structure.add_structure(
        structure_type=StructureType.CIRCULAR,
        number_of_fibers=3,
        fusion_degree=0.3,
        fiber_radius=62.5e-6,
        compute_fusing=True
    )

    clad_structure.refractive_index = clad_refractive_index


    fiber_list = [
        fiber_loader.load_fiber('DCF1300S_20', clad_refractive_index=clad_refractive_index, position=clad_structure.cores[0]),
        fiber_loader.load_fiber('DCF1300S_26', clad_refractive_index=clad_refractive_index, position=clad_structure.cores[1]),
        fiber_loader.load_fiber('DCF1300S_33', clad_refractive_index=clad_refractive_index, position=clad_structure.cores[2])
    ]

    capillary_tube = Profile()

    capillary_tube.add_center_fiber(
        fiber_radius=150e-6,
    )

    capillary_tube.refractive_index = clad_structure.refractive_index - 15e-3





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    INFO:root:Created connection between fibers at Point(position=(4.081007944347948e-21, 5.9486135244271083e-05), instance=None, index=None) and Point(position=(-5.151650429449545e-05, -2.9743067622135525e-05), instance=None, index=None)
    INFO:root:Created connection between fibers at Point(position=(4.081007944347948e-21, 5.9486135244271083e-05), instance=None, index=None) and Point(position=(5.1516504294495546e-05, -2.974306762213563e-05), instance=None, index=None)
    INFO:root:Created connection between fibers at Point(position=(-5.151650429449545e-05, -2.9743067622135525e-05), instance=None, index=None) and Point(position=(5.1516504294495546e-05, -2.974306762213563e-05), instance=None, index=None)
    INFO:root:Computing the optimal structure geometry
    INFO:root:Configured connection: shift=0.039, topology=convex
    INFO:root:Configured connection: shift=0.039, topology=convex
    INFO:root:Configured connection: shift=0.039, topology=convex
    INFO:root:Configured connection: shift=0.064, topology=convex
    INFO:root:Configured connection: shift=0.064, topology=convex
    INFO:root:Configured connection: shift=0.064, topology=convex
    INFO:root:Configured connection: shift=0.024, topology=convex
    INFO:root:Configured connection: shift=0.024, topology=convex
    INFO:root:Configured connection: shift=0.024, topology=convex
    INFO:root:Configured connection: shift=0.015, topology=convex
    INFO:root:Configured connection: shift=0.015, topology=convex
    INFO:root:Configured connection: shift=0.015, topology=convex
    INFO:root:Configured connection: shift=0.009, topology=convex
    INFO:root:Configured connection: shift=0.009, topology=convex
    INFO:root:Configured connection: shift=0.009, topology=convex
    INFO:root:Configured connection: shift=0.006, topology=convex
    INFO:root:Configured connection: shift=0.006, topology=convex
    INFO:root:Configured connection: shift=0.006, topology=convex
    INFO:root:Configured connection: shift=0.004, topology=convex
    INFO:root:Configured connection: shift=0.004, topology=convex
    INFO:root:Configured connection: shift=0.004, topology=convex
    INFO:root:Configured connection: shift=0.002, topology=convex
    INFO:root:Configured connection: shift=0.002, topology=convex
    INFO:root:Configured connection: shift=0.002, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.001, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Configured connection: shift=0.000, topology=convex
    INFO:root:Computing the optimal core positions
    INFO:root:Starting core position optimization...
    INFO:root:Optimization successful: cost=5.70e-17
    INFO:root:Starting core position optimization...
    INFO:root:Optimization successful: cost=5.70e-17
    INFO:root:Starting core position optimization...
    INFO:root:Optimization successful: cost=6.61e-17




.. GENERATED FROM PYTHON SOURCE LINES 48-51

Generating the computing workflow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Workflow class to define all the computation parameters before initializing the solver

.. GENERATED FROM PYTHON SOURCE LINES 51-73

.. code-block:: Python

    workflow = Workflow(
        fiber_list=fiber_list,              # List of fiber to be added in the mesh, the order matters.
        clad_structure=clad_structure,      # Cladding structure, if None provided then no cladding is set.
        capillary_tube=capillary_tube,
        wavelength=wavelength,              # Wavelength used for the mode computation.
        resolution=30,                      # Number of point in the x and y axis [is divided by half if symmetric or anti-symmetric boundaries].
        x_bounds=DomainAlignment.CENTERING, # Mesh x-boundary structure.
        y_bounds=DomainAlignment.CENTERING, # Mesh y-boundary structure.
        boundaries=[Boundaries()],      # Set of symmetries to be evaluated, each symmetry add a round of simulation
        n_sorted_mode=3,                # Total computed and sorted mode.
        n_added_mode=6,                 # Additional computed mode that are not considered later except for field comparison [the higher the better but the slower].
        plot_geometry=True,             # Plot the geometry mesh before computation.
        debug_mode=0,                   # Print the iteration step for the solver plus some other important steps. [Does not work properly on jupyter notebooks]
        auto_label=False,               # Auto labeling the mode. Label are not always correct and should be verified afterwards.
        itr_final=0.1,                  # Final value of inverse taper ratio to simulate
    )

    superset = workflow.get_superset()


    profile = AlphaProfile(symmetric=False, add_end_of_taper_section=True)




.. image-sg:: /gallery/basic/images/sphx_glr_plot_propagation_001.png
   :alt: Fiber structure, Fiber structure
   :srcset: /gallery/basic/images/sphx_glr_plot_propagation_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 74-75

Adding a first taper segment with large initial heating length (i.e. slow reduction)

.. GENERATED FROM PYTHON SOURCE LINES 75-87

.. code-block:: Python

    profile.add_taper_segment(
        alpha=0,
        initial_heating_length=0.1e-3,
        stretching_length=0.1e-3
    )

    profile.initialize()

    propagation = workflow.superset.propagate(add_coupling=False, profile=profile, initial_amplitude=[1, 0, 0])

    propagation.plot()
    # -



.. image-sg:: /gallery/basic/images/sphx_glr_plot_propagation_002.png
   :alt: plot propagation
   :srcset: /gallery/basic/images/sphx_glr_plot_propagation_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 11.518 seconds)


.. _sphx_glr_download_gallery_basic_plot_propagation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_propagation.ipynb <plot_propagation.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_propagation.py <plot_propagation.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_propagation.zip <plot_propagation.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
